--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "loudness": "^0.4.2",
+    "play-sound": "^1.1.6"
   }
 }
